--- a/src/app/fill-report/fill-report.component.html
+++ b/src/app/fill-report/fill-report.component.html
@@ -134,7 +134,7 @@
             </div>
         </div>
         <div class="row">
-            <div class="col-11">
+            <div class="col-12">
                 <h5>תגובות:</h5>
                 <div class="expantionBox" *ngIf="usersReponsesList?.length > 0">
                     <div class="mat-accordion">
@@ -163,12 +163,12 @@
                     </div>
                 </div>
             </div>
-            <div class="col-1">
-                <!-- <button mat-mini-fab matTooltip="הוספת תגובה" id="addReply" (click)="addResponseToReport(reportID)"
+            <!-- <div class="col-1">
+                <button mat-mini-fab matTooltip="הוספת תגובה" id="addReply" (click)="addResponseToReport(reportID)"
                     color="primary">
                     <mat-icon>add</mat-icon>
-                </button> -->
-            </div>
+                </button>
+            </div> -->
         </div>
     </div>
     <!-- <div class="modal-footer text-left" *ngIf="creator || reportID == '0';else note">
