--- a/src/app/formsanswered/formsanswered.component.html
+++ b/src/app/formsanswered/formsanswered.component.html
@@ -24,7 +24,7 @@
                                     <div class="form-group">
                                         <mat-form-field>
                                             <input matInput formControlName="personalPassport" autocomplete="off"
-                                                placeholder="חפש לפי תעודת זהות" name="fliterVal" />
+                                                placeholder="חפש לפי תעודת זהות מטופל" name="fliterVal" />
                                         </mat-form-field>
                                     </div>
                                 </div>
