--- a/src/app/nurses-manage-dashboard/other-departments/other-departments.component.html
+++ b/src/app/nurses-manage-dashboard/other-departments/other-departments.component.html
@@ -1,9 +1,9 @@
 <mat-progress-bar mode="indeterminate" id="buffer" *ngIf="!progressBarNumbers"></mat-progress-bar>
-<button type="button" class="close" matTooltip="סגירה" aria-label="Close" (click)="closeModal()">
+<button type="button" class="close" *ngIf="deliveryRoomDialog == undefined" matTooltip="סגירה" aria-label="Close" (click)="closeModal()">
     <span aria-hidden="true">&times;</span>
 </button>
 <form class="form" [formGroup]="deliveryRoomForm" *ngIf="delivery">
-    <h4><b style="margin-left: 120px;">חדר לידה </b> <span>{{myDate | date: "dd.MM.yyyy"}}</span></h4>
+    <h4><b style="margin-left: 120px;font-family: 'math';">ילדו היום  </b> <span style="font-family: 'math';">{{myDate | date: "dd.MM.yyyy"}}</span></h4>
     <table dir="rtl" [dataSource]="dataSource3" mat-table class="mat-elevation-z8" style="width: 100%;">
 
         <ng-container matColumnDef="regular">
@@ -49,7 +49,7 @@
         </div>
     </div> -->
     <hr>
-    <h4>רשימת מטופלות במחלקה <b>
+    <h4 style="font-family: 'math';">רשימת מטופלות במחלקה <b>
         </b></h4>
 
     <div dir="rtl">
@@ -61,15 +61,15 @@
     <div dir="rtl" class="mb-3 text-center">
         <mat-list role="list" id="list_of_types">
             <mat-list-item role="listitem"><button type="button" id="details-btn" (click)="applyFilter($event,'')"
-                    mat-raised-button style="background-image: linear-gradient(grey, aquamarine);">
+                    mat-raised-button style="background-image: linear-gradient(grey, aquamarine);font-family: 'math';">
                     הכל
                 </button></mat-list-item>
             <mat-list-item role="listitem"><button type="button" id="details-btn" (click)="applyFilter($event,'ACTIVE')"
-                    mat-raised-button style="background-color: aquamarine;">
+                    mat-raised-button style="background-color: aquamarine;font-family: 'math';">
                     מטופלות כעת
                 </button></mat-list-item>
             <mat-list-item role="listitem"><button type="button" id="details-btn" (click)="applyFilter($event,'NOT')"
-                    mat-raised-button style="background-color: grey;">
+                    mat-raised-button style="background-color: grey;font-family: 'math';">
                     השתחררו
                 </button></mat-list-item>
         </mat-list>
@@ -119,7 +119,7 @@
 </form>
 
 <form class="form" *ngIf="surgery">
-    <h4><b style="margin-left: 120px;">חדר ניתוח </b> {{myDate | date: "dd.MM.yyyy"}}</h4>
+    <h4 style="font-family: 'math';"><b style="margin-left: 120px;">חדר ניתוח </b> {{myDate | date: "dd.MM.yyyy"}}</h4>
     <table dir="rtl" [dataSource]="dataSource4" mat-table class="mat-elevation-z8" style="width: 100%;">
 
         <ng-container matColumnDef="inprogress">
@@ -143,7 +143,7 @@
         <tr mat-row *matRowDef="let row; columns: columnsToDisplay2;"></tr>
     </table>
     <hr>
-    <h4>תוכנית ניתוחים <b>
+    <h4 style="font-family: 'math';">תוכנית ניתוחים <b>
         </b></h4>
     <div dir="rtl">
         <mat-form-field class="float-right text-right" appearance="standard">
@@ -176,7 +176,7 @@
 
         <ng-container matColumnDef="surgeryname">
             <th mat-header-cell *matHeaderCellDef> שם ניתוח </th>
-            <td mat-cell *matCellDef="let element"> {{element.SurgeryName}} </td>
+            <td mat-cell *matCellDef="let element" style="word-break: break-all;"> {{element.SurgeryName}} </td>
         </ng-container>
 
         <ng-container matColumnDef="date">
@@ -208,17 +208,17 @@
 </form>
 
 <form class="form" *ngIf="ICU">
-    <h4><b style="margin-left: 120px;">מחלקה לרפואה דחופה </b> {{myDate | date: "dd.MM.yyyy"}}</h4>
+    <h4 style="font-family: 'math';"><b style="margin-left: 120px;">מחלקה לרפואה דחופה </b> {{myDate | date: "dd.MM.yyyy"}}</h4>
     <table dir="rtl" [dataSource]="dataSource5" mat-table class="mat-elevation-z8" style="width: 100%;">
 
         <ng-container matColumnDef="all">
             <th mat-header-cell *matHeaderCellDef> הכל </th>
             <td mat-cell *matCellDef="let element"><button type="button"
                     (click)="getOtherDepartmentPatients('ALL','0',$event)" matTooltip="מטופלים במצטבר"
-                    mat-raised-button style="background-image: linear-gradient(grey, aquamarine);">
+                    mat-raised-button style="background-image: linear-gradient(grey, aquamarine);font-family: 'math';">
                     {{element.ALL}}
                 </button>
-                <button type="button" style="background-color: aquamarine;"
+                <button type="button" style="background-color: aquamarine;font-family: 'math';"
                     (click)="getOtherDepartmentPatients('ALL','1',$event)" matTooltip="מטופלים כעת" [disabled]
                     mat-raised-button>
                     {{element.ALLNOW}}
@@ -229,9 +229,9 @@
             <th mat-header-cell *matHeaderCellDef> חדר הלם </th>
             <td mat-cell *matCellDef="let element"><button type="button"
                     (click)="getOtherDepartmentPatients('HELEM','0',$event)" matTooltip="מטופלים במצטבר"
-                    mat-raised-button style="background-image: linear-gradient(grey, aquamarine);">
+                    mat-raised-button style="background-image: linear-gradient(grey, aquamarine);font-family: 'math';">
                     {{element.HELEM}}
-                </button> <button type="button" style="background-color: aquamarine;"
+                </button> <button type="button" style="background-color: aquamarine;font-family: 'math';"
                     (click)="getOtherDepartmentPatients('HELEM','1',$event)" matTooltip="מטופלים כעת" [disabled]
                     mat-raised-button>
                     {{element.HELEMNOW}}
@@ -243,9 +243,9 @@
             <th mat-header-cell *matHeaderCellDef> שוכבים </th>
             <td mat-cell *matCellDef="let element"><button type="button" matTooltip="מטופלים במצטבר"
                     (click)="getOtherDepartmentPatients('SHOKHVVEM','0',$event)" mat-raised-button
-                    style="background-image: linear-gradient(grey, aquamarine);">
+                    style="background-image: linear-gradient(grey, aquamarine);font-family: 'math';">
                     {{element.SHOKHVVEM}}
-                </button> <button type="button" style="background-color: aquamarine;"
+                </button> <button type="button" style="background-color: aquamarine;font-family: 'math';"
                     (click)="getOtherDepartmentPatients('SHOKHVVEM','1',$event)" matTooltip="מטופלים כעת" [disabled]
                     mat-raised-button>
                     {{element.SHOKHVVEMNOW}}
@@ -255,9 +255,9 @@
             <th mat-header-cell *matHeaderCellDef> מהלכים </th>
             <td mat-cell *matCellDef="let element"><button type="button" matTooltip="מטופלים במצטבר"
                     (click)="getOtherDepartmentPatients('MEHALKHEM','0',$event)" mat-raised-button
-                    style="background-image: linear-gradient(grey, aquamarine);">
+                    style="background-image: linear-gradient(grey, aquamarine);font-family: 'math';">
                     {{element.MEHALKHEM}}
-                </button> <button type="button" style="background-color: aquamarine;"
+                </button> <button type="button" style="background-color: aquamarine;font-family: 'math';"
                     (click)="getOtherDepartmentPatients('MEHALKHEM','1',$event)" matTooltip="מטופלים כעת" [disabled]
                     mat-raised-button>
                     {{element.MEHALKHEMNOW}}
@@ -267,9 +267,9 @@
             <th mat-header-cell *matHeaderCellDef> נשים </th>
             <td mat-cell *matCellDef="let element"><button type="button"
                     (click)="getOtherDepartmentPatients('WOMEN','0',$event)" mat-raised-button
-                    matTooltip="מטופלים במצטבר" style="background-image: linear-gradient(grey, aquamarine);">
+                    matTooltip="מטופלים במצטבר" style="background-image: linear-gradient(grey, aquamarine);font-family: 'math';">
                     {{element.WOMEN}}
-                </button> <button type="button" style="background-color: aquamarine;"
+                </button> <button type="button" style="background-color: aquamarine;font-family: 'math';"
                     (click)="getOtherDepartmentPatients('WOMEN','1',$event)" matTooltip="מטופלים כעת" [disabled]
                     mat-raised-button>
                     {{element.WOMENNOW}}
@@ -279,9 +279,9 @@
             <th mat-header-cell *matHeaderCellDef> ילדים </th>
             <td mat-cell *matCellDef="let element"><button type="button"
                     (click)="getOtherDepartmentPatients('CHILDREN','0',$event)" mat-raised-button
-                    style="background-image: linear-gradient(grey, aquamarine);" matTooltip="מטופלים במצטבר">
+                    style="background-image: linear-gradient(grey, aquamarine);font-family: 'math';" matTooltip="מטופלים במצטבר">
                     {{element.CHILDREN}}
-                </button> <button type="button" style="background-color: aquamarine;"
+                </button> <button type="button" style="background-color: aquamarine;font-family: 'math';"
                     (click)="getOtherDepartmentPatients('CHILDREN','1',$event)" matTooltip="מטופלים כעת" [disabled]
                     mat-raised-button>
                     {{element.CHILDRENNOW}}
@@ -294,7 +294,7 @@
     </table>
 
     <hr>
-    <h4 *ngIf="ICUDetails">רשימת מטופלים<b>
+    <h4 *ngIf="ICUDetails" style="font-family: 'math';">רשימת מטופלים<b>
         </b></h4>
         <mat-progress-bar mode="indeterminate" id="buffer" *ngIf="!IcuPatientsBar"></mat-progress-bar>
     <div dir="rtl">
