--- a/src/app/clinics-dashboard/clinics-dashboard.component.html
+++ b/src/app/clinics-dashboard/clinics-dashboard.component.html
@@ -1,4 +1,5 @@
 <div class="row" id="page-toshow">
+    <h1 class="page-title text-center">הצעות מחיר פה ולסת</h1>
     <div class="col"></div>
     <div class="col-4">
         <div dir="rtl" class="card w-85-p">
