--- a/src/app/nurses-department-manage/nurses-department-manage.component.css
+++ b/src/app/nurses-department-manage/nurses-department-manage.component.css
@@ -1,110 +1,238 @@
-.my-container{
-  background-color: aliceblue;
-}
 
-table {
-    width: 100%;
+
+  @media only screen and (min-width: 1050px) {
+    
+  .my-container{
     background-color: aliceblue;
-    font-family: 'Math';
-    font-weight: bolder;
+  }
+  
+  table {
+      width: 100%;
+      background-color: aliceblue;
+      font-family: 'Math';
+      font-weight: bolder;
+      table-layout: fixed;
+    }
+  
+    h4,.btn.btn-primary{
+      font-family: 'Math';
+      font-weight: bolder;
+      font-size: 18px;
+    }
+  
+    #EventBtn{
+      float: left;
+    }
+    #EventBtn2{
+      float: right;
+    }
+  
+  th.mat-header-cell, td.mat-footer-cell {
+      padding: 0;
+      border-bottom-width: 1px;
+      border-bottom-style: solid;
+      font-size: 20px;
+      background-color: floralwhite;
   }
 
-  h4,.btn.btn-primary{
-    font-family: 'Math';
-    font-weight: bolder;
+  .mat-row:hover {
+    background-color: darkgray;
+  }
+  .table tr.highlight :hover{
+    background-color: darkgray;
+  }
+
+  td.mat-cell{
+    padding: 0;
+    border-bottom-width: 1px;
+    border-bottom-style: solid;
+    font-size: 15px;
+  }
+  
+ 
+
+  .mat-row:nth-child(even){
+    background-color: floralwhite;
+  }
+   
+  .mat-row:nth-child(odd){
+    background-color: aliceblue;
+  }
+    
+  [dir=rtl] th.mat-header-cell {
+      text-align: center;
+      padding: 1px 5px 1px 30px;
+      white-space: nowrap;
+  }
+  
+  .close {
+    float: right;
+    font-size: 2rem;
+    font-weight: 700;
+    line-height: 1;
+    color: #000;
+    text-shadow: 0 1px 0 #fff;
+    opacity: .5;
+    padding-left: 15px;
+  }
+  #list_of_types{
+    display: inline-flex;
+  }
+  #buffer{
+    background-color: blue;
+  }
+  
+  #table-overflow{
+    background-color: aliceblue;
+  }
+  
+  /* #EventBtnnew{
+    border-radius: 0px 20px 20px 0px;
+  } */
+  
+  /* #EventBtndisplay{
+    border-radius: 20px 0px 0px 20px;
+  } */
+  
+  #generalClinicalBtn{
+    margin-right: 6px;
+  }
+  
+  #releasedBtn{
+    float: left;
+    margin-left: 30px;
+  }
+  
+  #details-btn{
+    background-color: papayawhip;
+    color: black;
+    font-family: 'math';
+    font-weight: bold;
     font-size: 18px;
   }
-
-  #EventBtn{
-    float: left;
   }
-  #EventBtn2{
+
+
+
+@media only screen and (min-width: 100px) {
+  .my-container{
+    background-color: aliceblue;
+  }
+  
+  table {
+      width: 100%;
+      background-color: aliceblue;
+      font-family: 'Math';
+      font-weight: bolder;
+      table-layout: fixed;
+    }
+  
+    h4,.btn.btn-primary{
+      font-family: 'Math';
+      font-weight: bolder;
+      font-size: 18px;
+    }
+    #btnDepts{
+      font-family: 'Math';
+      font-weight: bolder;
+      font-size: 14px;
+      height: 36px;
+      margin-left: 2px;
+    }
+  
+    #EventBtn{
+      float: left;
+    }
+    #EventBtn2{
+      float: right;
+    }
+  
+  td.mat-cell{
+    padding: 0;
+    border-bottom-width: 1px;
+    border-bottom-style: solid;
+    font-size: 14px;
+  }
+  
+  .mat-row:nth-child(even){
+    background-color: floralwhite;
+  }
+   
+  /* .mat-row:nth-child(even) :hover{
+    background-color: grey;
+  } */
+  
+  .mat-row:nth-child(odd){
+    background-color: aliceblue;
+  }
+  
+  .mat-row:nth-child :hover{
+    background-color: grey;
+  }
+  
+  
+  .close {
     float: right;
+    font-size: 2rem;
+    font-weight: 700;
+    line-height: 1;
+    color: #000;
+    text-shadow: 0 1px 0 #fff;
+    opacity: .5;
+    padding-left: 15px;
+  }
+  #list_of_types{
+    display: inline-flex;
+  }
+  #buffer{
+    background-color: blue;
+  }
+  
+  #table-overflow{
+    background-color: aliceblue;
   }
 
+  #generalClinicalBtn{
+    margin-right: 6px;
+  }
+  
+  #releasedBtn{
+    float: left;
+    margin-left: 30px;
+  }
+  
+  #details-btn{
+    background-color: papayawhip;
+    color: black;
+    font-family: 'math';
+    font-weight: bold;
+    font-size: 14px;
+    margin: -6px;
+  }
   th.mat-header-cell, td.mat-footer-cell {
     padding: 0;
     border-bottom-width: 1px;
     border-bottom-style: solid;
-    font-size: 20px;
+    font-size: 15px;
     background-color: floralwhite;
 }
-
-td.mat-cell{
-  padding: 0;
-  border-bottom-width: 1px;
-  border-bottom-style: solid;
-  font-size: 15px;
+.mat-list-base .mat-list-item .mat-list-item-content, .mat-list-base .mat-list-option .mat-list-item-content{
+  padding: 0 2px;
 }
-
-.mat-row:nth-child(even){
-  background-color: floralwhite;
+[dir="rtl"] td.mat-cell:first-of-type, [dir="rtl"] td.mat-footer-cell:first-of-type, [dir="rtl"] th.mat-header-cell:first-of-type {
+  padding-left: 0px !important;
+  padding-right: 0px !important;
 }
- 
-/* .mat-row:nth-child(even) :hover{
-  background-color: grey;
-} */
-
-.mat-row:nth-child(odd){
-  background-color: aliceblue;
+[dir="rtl"] td.mat-cell:first-of-type, [dir="rtl"] td.mat-footer-cell:first-of-type, [dir="rtl"] th.mat-header-cell:last-of-type {
+  padding-left: 0px !important;
+  padding-right: 0px !important;
 }
-
-.mat-row:nth-child :hover{
-  background-color: grey;
+[dir="rtl"] td.mat-cell:last-of-type, [dir="rtl"] td.mat-footer-cell:last-of-type, [dir="rtl"] th.mat-header-cell:last-of-type {
+  padding-left: 20px !important;
+  padding-right: 0px !important;
 }
-
-/* .mat-row:nth-row(odd) :hover{
-  background-color: grey;
-} */
-
 [dir=rtl] th.mat-header-cell {
-    text-align: center;
-    padding: 1px 5px 1px 30px;
-    white-space: nowrap;
+  text-align: center;
+  padding: 0px 0px 0px 0px;
 }
-
-.close {
-  float: right;
-  font-size: 2rem;
-  font-weight: 700;
-  line-height: 1;
-  color: #000;
-  text-shadow: 0 1px 0 #fff;
-  opacity: .5;
-  padding-left: 15px;
-}
-#list_of_types{
-  display: inline-flex;
-}
-#buffer{
-  background-color: blue;
-}
-
-#table-overflow{
-  background-color: aliceblue;
-}
-
-/* #EventBtnnew{
-  border-radius: 0px 20px 20px 0px;
-} */
-
-/* #EventBtndisplay{
-  border-radius: 20px 0px 0px 20px;
-} */
-
-#generalClinicalBtn{
-  margin-right: 6px;
-}
-
-#releasedBtn{
-  float: left;
-  margin-left: 30px;
-}
-
-#details-btn{
-  background-color: papayawhip;
-  color: black;
-  font-family: 'math';
-  font-weight: bold;
-  font-size: 18px;
 }
