--- a/src/app/updateform/updateform.component.html
+++ b/src/app/updateform/updateform.component.html
@@ -165,7 +165,9 @@
                 </div>
             </div>
             <form class="worker-form-in">
-                <h3>חלק שאלות :</h3>
+                <div class="row-1">
+                    <h3>חלק שאלות :</h3>
+                </div> 
                 <div class="row-1" *ngFor="let item of rowFormData.Questions">
                     <div class="colr-12 brs-1">
                         <p class="fix-mb-5">
