--- a/src/app/poriadeparts/poriadeparts.component.html
+++ b/src/app/poriadeparts/poriadeparts.component.html
@@ -152,6 +152,23 @@
                             <mat-form-field>
                                 <input
                                 
+                                     id="SEODE_NAME"
+                                    matInput
+                                    autocomplete="off"
+                                    class="form-control"
+                                    placeholder=" מחלקה סיעודית"
+                                    formControlName="SEODE_NAME"
+                                    required
+                                    type="text"
+                                />
+                            </mat-form-field>
+                        </div>
+                    </div>
+                    <div class="col">
+                        <div class="form-group">
+                            <mat-form-field>
+                                <input
+                                
                                      id="SHEET_NAME"
                                     matInput
                                     autocomplete="off"
