--- a/src/app/casenumbers/casenumbers.component.html
+++ b/src/app/casenumbers/casenumbers.component.html
@@ -1,18 +1,17 @@
 <div id="page-toshow111">
     <h1 class="text-center">
-        <b><span>מזהה קרטון: </span>{{CartoonUNID}}</b>
-        
+        <b><span>מזהה קרטון: </span>{{ CartoonUNID }}</b>
     </h1>
-    <h1 class="text-center">    
-        <b><span>סה"כ מקרים: </span>{{TotalCases}}</b>
+    <h1 class="text-center">
+        <b><span>סה"כ מקרים: </span>{{ TotalCases }}</b>
     </h1>
-    <br>
+    <br />
     <div class="container-fluid hide-on-print">
         <div class="row">
             <div class="col">
                 <div dir="rtl" class="card w-85-p">
                     <div dir="rtl" class="card-body">
-                        <form class="form" ngbAutofocus>
+                        <form *ngIf="!printOn" class="form" ngbAutofocus>
                             <div class="row">
                                 <div class="col">
                                     <div class="form-group">
@@ -26,7 +25,9 @@
                                                 [skipStart]="3"
                                                 [debounce]="300"
                                                 autocomplete="off"
-                                                (onDetected)="onDetected($event)"
+                                                (onDetected)="
+                                                    onDetected($event)
+                                                "
                                             />
                                         </mat-form-field>
                                     </div>
@@ -40,84 +41,83 @@
     </div>
     <br />
     <hr />
-    <div class="container-fluid pb-60  show-on-print">
+    <div class="container-fluid pb-60 show-on-print">
         <div class="row">
             <div dir="rtl" class="col">
                 <div class="table-responsive">
-                    <div class="table-spinner-container">
+                    <div class="table-spinner-container" id="formTable1Div" #formTable1Div>
                         <!-- <mat-form-field>
                                 <input matInput (keyup)="applyFiltercasenumbers($event.target.value)" placeholder="חפש">
                             </mat-form-field> -->
+
                         <table
+                            [ngStyle]="{'width':printOn? '100%' : '', 'border':printOn? '1px solid black !important;' : ''}"
                             class="table"
                             mat-table
+                            dir="rtl"
                             [dataSource]="dataSource"
                             id="formTable1"
                         >
                             <ng-container matColumnDef="Dose">
-                                <th mat-header-cell *matHeaderCellDef>
-                                מנה
-                                </th>
+                                <th mat-header-cell *matHeaderCellDef>מנה</th>
                                 <td mat-cell *matCellDef="let element">
                                     {{ element.Dose }}
                                 </td>
                             </ng-container>
                             <ng-container matColumnDef="HospitalDate">
-                                <th mat-header-cell *matHeaderCellDef>
-                                   תאריך מקרה
+                                <th  mat-header-cell *matHeaderCellDef>
+                                    תאריך מקרה
                                 </th>
-                                <td mat-cell *matCellDef="let element">
+                                <td  mat-cell *matCellDef="let element">
                                     {{ element.HospitalDate }}
                                 </td>
                             </ng-container>
                             <ng-container matColumnDef="CaseNumber">
-                                <th mat-header-cell *matHeaderCellDef>
+                                <th  mat-header-cell *matHeaderCellDef>
                                     מס' מקרה
                                 </th>
-                                <td mat-cell *matCellDef="let element">
+                                <td  mat-cell *matCellDef="let element">
                                     {{ element.CaseNumber }}
                                 </td>
                             </ng-container>
                             <ng-container matColumnDef="PatientNumber">
-                                <th mat-header-cell *matHeaderCellDef>
+                                <th  mat-header-cell *matHeaderCellDef>
                                     מס' מטופל
                                 </th>
-                                <td mat-cell *matCellDef="let element">
+                                <td  mat-cell *matCellDef="let element">
                                     {{ element.PatientNumber }}
                                 </td>
                             </ng-container>
                             <ng-container matColumnDef="PatientID">
-                                <th mat-header-cell *matHeaderCellDef>
-                                    ת.ז
-                                </th>
-                                <td mat-cell *matCellDef="let element">
+                                <th  mat-header-cell *matHeaderCellDef>ת.ז</th>
+                                <td  mat-cell *matCellDef="let element">
                                     {{ element.PatientID }}
                                 </td>
                             </ng-container>
                             <ng-container matColumnDef="FirstName">
-                                <th mat-header-cell *matHeaderCellDef>
+                                <th  mat-header-cell *matHeaderCellDef>
                                     שם פרטי
                                 </th>
-                                <td mat-cell *matCellDef="let element">
+                                <td  mat-cell *matCellDef="let element">
                                     {{ element.FirstName }}
                                 </td>
                             </ng-container>
                             <ng-container matColumnDef="LastName">
-                                <th mat-header-cell *matHeaderCellDef>
-                                   שם משפחה
+                                <th  mat-header-cell *matHeaderCellDef>
+                                    שם משפחה
                                 </th>
-                                <td mat-cell *matCellDef="let element">
+                                <td  mat-cell *matCellDef="let element">
                                     {{ element.LastName }}
                                 </td>
-                            </ng-container>   
+                            </ng-container>
                             <ng-container matColumnDef="DOB">
-                                <th mat-header-cell *matHeaderCellDef>
+                                <th  mat-header-cell *matHeaderCellDef>
                                     תאריך לידה
                                 </th>
-                                <td mat-cell *matCellDef="let element">
+                                <td  mat-cell *matCellDef="let element">
                                     {{ element.DOB }}
                                 </td>
-                            </ng-container>                        
+                            </ng-container>
                             <ng-container matColumnDef="Click">
                                 <th
                                     mat-header-cell
@@ -189,9 +189,7 @@
                 <span aria-hidden="true">&times;</span>
             </button>
         </div>
-        <div class="modal-body">
-            
-        </div>
+        <div class="modal-body"></div>
         <div class="modal-footer text-left">
             <input
                 id="CaseNumber"
@@ -200,14 +198,21 @@
                 formControlName="CaseNumber"
             />
             <input
-            id="CartoonID"
-            type="hidden"
-            id="CartoonID"
-            formControlName="CartoonID"
+                id="CartoonID"
+                type="hidden"
+                id="CartoonID"
+                formControlName="CartoonID"
             />
             <button type="submit" mat-raised-button color="warn">כן</button>
             &nbsp;&nbsp;&nbsp;
-            <button type="button" (click)="modal.dismiss('Cross click')" mat-raised-button color="primary">לא</button>
+            <button
+                type="button"
+                (click)="modal.dismiss('Cross click')"
+                mat-raised-button
+                color="primary"
+            >
+                לא
+            </button>
         </div>
     </form>
 </ng-template>
